--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+package-json-lock
 
 # testing
 /coverage
@@ -12,6 +13,7 @@
 /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
@@ -21,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn-lock.json
