Delete boilerplate Create-React-App code

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "QG App",
+  "name": "Queer Global",
   "icons": [
     {
       "src": "favicon.ico",
