--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
