--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.12",
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.15"
+    "@types/styled-components": "^5.1.15",
+    "html-webpack-plugin": "^5.5.1"
   }
 }
