Updated package.json tasks for #38; after eslint --fix
Changed the eslint task path to reflect the path that works for this
repository, specifically "src/components/** src/App.t*"

Also fixed a variable assigment in src/components/navbar/Navbar.tsx

--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "lint": "eslint src/*",
-    "lint:fix": "eslint src/* --fix",
-    "lint:quiet": "eslint src/* --quiet",
+    "lint": "eslint src/components/** src/App.t*",
+    "lint:fix": "eslint src/components/** src/App.t* --fix",
+    "lint:quiet": "eslint src/components/** src/App.t* --quiet",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
