--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "lint": "eslint src/components/** src/App.t*",
+    "lint:fix": "eslint src/components/** src/App.t* --fix",
+    "lint:quiet": "eslint src/components/** src/App.t* --quiet",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -68,6 +71,10 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.12",
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.15"
+    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
