--- a/.gitignore
+++ b/.gitignore
@@ -11,16 +11,24 @@
 # production
 /build
 
-# misc
+# OS X
 .DS_Store
+
+# 12 Factor Auth files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Logging
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 package-lock.json
 
+
 /notes
+
+# IDE Directories
+.idea
+.vscode
