on #50: Removing 18.x test and OpenSSL env variable

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -31,4 +31,3 @@ jobs:
     - run: npm run test:ci
       env:
         CI: ""
-        NODE_OPTIONS: --openssl-legacy-provider
