--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-snap-carousel": "^0.3.2",
     "styled-components": "^5.3.11",
     "styled-icons": "^10.47.0",
     "typescript": "^5.1.3",
